[gd_scene load_steps=12 format=3 uid="uid://bbdt8t64yfstg"]

[ext_resource type="Script" path="res://scenes/cutscenes/cutscene1/cutscene1-3.gd" id="1_kok83"]
[ext_resource type="Texture2D" uid="uid://dslertpef5hqe" path="res://assets/cutscene/Black background for cutscene.png" id="2_sabpw"]
[ext_resource type="Texture2D" uid="uid://4gxswrkroh60" path="res://assets/cutscene/Borders for the cutscene image.png" id="3_afut0"]
[ext_resource type="Texture2D" uid="uid://cosdcjr2ycewh" path="res://assets/cutscene/Royal couple.png" id="4_74xq5"]
[ext_resource type="FontFile" uid="uid://bcaimoqptoi87" path="res://assets/fonts/public-pixel/PublicPixel.ttf" id="5_4nnv2"]
[ext_resource type="Script" path="res://scripts/RichTextLabel.gd" id="6_q0k12"]

[sub_resource type="Theme" id="Theme_1aj06"]
default_font = ExtResource("5_4nnv2")

[sub_resource type="Animation" id="Animation_dtsim"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gwtdk"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_085nn"]
_data = {
"fade_in": SubResource("Animation_dtsim"),
"fade_out": SubResource("Animation_gwtdk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17phh"]
size = Vector2(1918, 1080)

[node name="cutscene1-3" type="Node2D"]
script = ExtResource("1_kok83")

[node name="BlackBackgroundForCutscene" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(6, 6)
texture = ExtResource("2_sabpw")

[node name="BordersForTheCutsceneImage" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 540)
scale = Vector2(6, 6)
texture = ExtResource("3_afut0")

[node name="RoyalCouple" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 360)
scale = Vector2(4.3875, 2.8)
texture = ExtResource("4_74xq5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 270.0
offset_top = 705.0
offset_right = 1636.0
offset_bottom = 997.0
theme = SubResource("Theme_1aj06")
theme_override_constants/line_separation = 21
theme_override_font_sizes/normal_font_size = 28
text = "Their only child, as competent as their parents, is arguably more interested in all the physical activities, like archery and fencing, instead of studying. Deeming the need to become a scholar while their father still reigns as king to be unnecessary. "
scroll_active = false
autowrap_mode = 2
tab_size = 2
script = ExtResource("6_q0k12")

[node name="Timer" type="Timer" parent="Control/RichTextLabel"]
wait_time = 0.001

[node name="FadeRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 678.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeRect"]
libraries = {
"": SubResource("AnimationLibrary_085nn")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 1
z_as_relative = false
position = Vector2(960, 539)
shape = SubResource("RectangleShape2D_17phh")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[connection signal="gui_input" from="Control/RichTextLabel" to="." method="_on_rich_text_label_gui_input"]
[connection signal="timeout" from="Control/RichTextLabel/Timer" to="Control/RichTextLabel" method="_on_timer_timeout"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
